Big step into Java Module System, and getting things running on Java 17. Branching to 4.x to signal major upgrasde on the way. This doesn't build, but need to commit to get feedback.